Added the 'there is no true filter' note.

--- a/rt-turing.ipynb
+++ b/rt-turing.ipynb
@@ -269,7 +269,13 @@
     "\n",
     "What we really want is a semblance of Rt being held constant beyond the ends. To get this behaviour, instead of filtering the daily cases, we can filter the daily log ratio of cases and then back calculate the series from the smoothed value. With this approach, the ratio will be seen to held constant beyond the edges, meaning we'll get closer to a trend projection for Rt.\n",
     "\n",
-    "One option we have at hand is of course to discard values near the edge and apply usual filtering of the daily cases. However, that doesn't help us since we will only have Rt values for 5 days ago .. which isn't quite \"real time\". Filtering the log ratio series is better from that perspective."
+    "One option we have at hand is of course to discard values near the edge and apply usual filtering of the daily cases. However, that doesn't help us since we will only have Rt values for 5 days ago .. which isn't quite \"real time\". Filtering the log ratio series is better from that perspective.\n",
+    "\n",
+    "In the end, I chose to apply an causal decaying filter on the raw case arrivals first to prevent excessive influence of the latest daily figure, followed by the log ratio filter to stabilize Rt near the end.\n",
+    "\n",
+    "#### There is no \"true\" filter\n",
+    "\n",
+    "I think the bottomline is that given the weekly cycles embedded into the case reporting, we have to live with about a week's latency for a reliable Rt estimate. Any attempts to reduce the latency for a reliable estimate can only mean we have a filter that's already capable of predicting Rt a week into the future .. which unless no variation in action is seen over the previous couple of weeks or so and aren't planned for the coming week, is close to clairvoyance or at the least requires rich data from diverse sources. This means, we're essentially estimating Rt for a week ago .. which I think is still valuable. I only want to avoid giving the false impression of \"Rt has been going down over the past few days\" just because I used an inappropriate assumption for the filter."
    ]
   },
   {
